Fixes k value input field issue on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,6 @@ div.wrap {height:100%; overflow:hidden;}
 body { margin:0; padding:0; overflow: hidden;}
 
 
-.noSelect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-}
-
 /*remove Chrome's blue highlight*/
 :focus {
     outline: none !important;
